--- a/Atom/public/style/style.css
+++ b/Atom/public/style/style.css
@@ -107,3 +107,12 @@ option {
     margin-top: 3%;
     margin-bottom: 1.5%;
 }
+
+.f-atom {
+    font-size: 50px;
+    color: var(--p-color);
+}
+
+.f-atom-title {
+    color: rgb(255, 0, 100);
+}
